8374482: SA does not handle signal handler frame in mixed jstack